--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 body {
-    background-image: url("https://w.wallhaven.cc/full/od/wallhaven-odk61p.png");
+    background-image: url("https://rare-gallery.com/mocahbig/440793-Zelda-The-Legend-of-Zelda-Breath-of-the-Wild.png");
     background-repeat: no-repeat;
     background-size: cover;
-    backdrop-filter: blur(4px);
     background-attachment: fixed;
     height: 100%;
     width: 100dvw;
